@@ -47,6 +47,7 @@ Application Changes:
 - Resolved an issue with skill groups that were purchased in career mode not being properly able to be refunded.
 - Added a Close Window option under Window that can always be used to close the current window if no other option is convenient or visible. Fixes #4845.
 - Removed behaviour that prevented cyberware child objects from consuming a mount location that was blocked by the parent. This, for example, allows an elbow modular connector to be installed inside a cyberlimb arm. If you have custom content that depends on this current behaviour, please contact the dev team.
+- Fixed pair bonuses on modular gear not properly retaining Forced values. Closes #4893
 
 Data Changes:
 - One with the Matrix I, II, and III can no longer be taken multiple times.
